--- a/src/app/features/inbox-acto-inseguro/inbox-acto-inseguro.component.css
+++ b/src/app/features/inbox-acto-inseguro/inbox-acto-inseguro.component.css
@@ -148,3 +148,12 @@ table tr:nth-child(even) {
 .btn-ver:hover {
   background-color: #005499;
 }
+
+.form-group select {
+  width: 100%;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-sizing: border-box; /* Asegura que el padding no exceda el ancho total */
+}
