--- a/src/app/features/consultar-acto-inseguro/consultar-acto-inseguro.component.html
+++ b/src/app/features/consultar-acto-inseguro/consultar-acto-inseguro.component.html
@@ -97,6 +97,6 @@
 
   <div class="buttons">
     <button type="submit" class="btn-generar">Generar AC-AP</button>
-    <button type="button" class="btn-volver">Volver</button>
+    <button type="button" class="btn-volver" (click)="volver()">Volver</button>
   </div>
 </div>
