--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,15 +1,15 @@
 <app-header
   [title]="'SISTEMA DE IDENTIFICACIÓN DE POTENCIALES INCIDENTES LABORALES'"
-  [logoUrl]="'ruta-de-nuevo-logo.png'"
+  [logoUrl]="'assets/images/indra/logo_indra.png'"
   [headerImageUrl]="'ruta-de-nueva-imagen.png'">
 </app-header>
 
 <div class="dashboard-container">
 
   <div class="content">
-    <div class="logout-section">
+    <!-- <div class="logout-section">
       <button class="btn-logout" (click)="logout()">Cerrar sesión</button>
-    </div>
+    </div> -->
     <div class="welcome-section">
       <h2>Bienvenid {{ fullName }}</h2>
       <div class="actions">
@@ -20,11 +20,11 @@
     </div>
 
     <div class="illustration-section">
-      <img src="ruta-de-imagen-generica" alt="Ilustración de seguridad" class="illustration">
+      <img src="assets/images/indra/savety.png" alt="Ilustración de seguridad" class="illustration">
     </div>
   </div>
 
-  <div class="footer">
+  <!-- <div class="footer">
     <p>Política de cookies</p>
-  </div>
+  </div> -->
 </div>
