--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -2,8 +2,8 @@
   <div class="auth-content">
     <div class="card o-hidden">
       <div class="row">
-        <div class="col-md-6 text-center d-flex justify-content-center align-items-center" style="background-color: #006CB1;">
-          <img src="../assets/images/logo/logo.png" alt="Logo" class="logo">
+        <div class="col-md-6 text-center d-flex justify-content-center align-items-center" style="background-color: #004254;">
+          <img src="assets/images/indra/edificio_indra.png" alt="Logo" class="logo" style="width: 70%; height: auto;">
         </div>
         <div class="col-md-6">
           <div class="p-4">
@@ -25,7 +25,6 @@
                 <span *ngIf="!isLoading">Login</span>
               </button>
             </form>
-            <p class="mt-3 text-muted">¿Olvidó su contraseña? <a href="#">Recuperar</a></p>
           </div>
         </div>
       </div>
