--- a/src/app/features/dashboard/dashboard.component.css
+++ b/src/app/features/dashboard/dashboard.component.css
@@ -37,7 +37,7 @@
 }
 
 .action-button {
-  background-color: #004f8b;
+  background-color: #004254;
   color: white;
   border: none;
   border-radius: 5px;
@@ -49,7 +49,7 @@
 }
 
 .action-button:hover {
-  background-color: #003f63;
+  background-color: #004254;
 }
 
 .illustration-section {
@@ -66,7 +66,7 @@
 }
 
 .footer {
-  background-color: #003f63;
+  background-color: #004254;
   color: white;
   text-align: center;
   width: 100%;
