--- a/docs/browser/assets/styles/css/themes/dark-purple.css
+++ b/docs/browser/assets/styles/css/themes/dark-purple.css
@@ -6,7 +6,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
-  --blue: #263db5;
+  --blue: #004254;
   --indigo: #6610f2;
   --purple: #663399;
   --pink: #e83e8c;
