--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-header
   [title]="'SISTEMA DE IDENTIFICACIÓN DE POTENCIALES INCIDENTES LABORALES'"
   [logoUrl]="'assets/images/indra/logo_indra.png'"
-  [headerImageUrl]="'ruta-de-nueva-imagen.png'">
+  [headerImageUrl]="'assets/images/indra/edificio_indra.png'">
 </app-header>
 
 <div class="dashboard-container">
