--- a/src/app/features/inbox-acto-inseguro/inbox-acto-inseguro.component.html
+++ b/src/app/features/inbox-acto-inseguro/inbox-acto-inseguro.component.html
@@ -33,6 +33,7 @@
           <option value="implementado">Implementado</option>
           <option value="cerrado">Cerrado</option>
           <option value="cancelado">Cancelado</option>
+          <option value="enviado">Enviado</option>
         </select>
       </div>
 
