--- a/src/app/features/consultar-acto-inseguro/consultar-acto-inseguro.component.css
+++ b/src/app/features/consultar-acto-inseguro/consultar-acto-inseguro.component.css
@@ -3,7 +3,7 @@
 }
 
 .consultar-acto h2 {
-  background-color: #003f63;
+  background-color: #004254;
   color: white;
   padding: 10px;
   text-align: center;
@@ -35,7 +35,7 @@
 }
 
 .reporte-acto h2 {
-  background-color: #003f63;
+  background-color: #004254;
   color: white;
   padding: 10px;
   text-align: center;
@@ -95,7 +95,7 @@
 }
 
 .btn-generar {
-  background-color: #006cb1;
+  background-color: #004254;
   color: white;
 }
 
