--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   padding: 20px;
-  background-color: #003f63;
+  background-color: #004254;
   color: white;
 }
 
