--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -15,7 +15,16 @@
       <div class="actions">
         <button class="action-button" (click)="navigateToInboxActoInseguro()">Inbox de Acto o Condición Insegura</button>
         <button class="action-button">Registrar Acción Correctiva o Preventiva</button>
-        <button class="action-button">Consultar Acción Correctivas o Preventiva</button>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <!-- <button class="action-button">Consultar Acción Correctivas o Preventiva</button> -->
       </div>
     </div>
 
