--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
 <app-header
   [title]="'SISTEMA DE IDENTIFICACIÓN DE POTENCIALES INCIDENTES LABORALES'"
   [logoUrl]="'assets/images/indra/logo_indra.png'"
-  [headerImageUrl]="'assets/images/indra/edificio_indra.png'">
+  [headerImageUrl]="'assets/images/indra/edificio_indra.png'"
+>
 </app-header>
 
 <div class="dashboard-container">
-
   <div class="content">
     <!-- <div class="logout-section">
       <button class="btn-logout" (click)="logout()">Cerrar sesión</button>
@@ -13,23 +13,25 @@
     <div class="welcome-section">
       <h2>Bienvenid {{ fullName }}</h2>
       <div class="actions">
-        <button class="action-button" (click)="navigateToInboxActoInseguro()">Inbox de Acto o Condición Insegura</button>
-        <button class="action-button">Registrar Acción Correctiva o Preventiva</button>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <button class="action-button" (click)="navigateToInboxActoInseguro()">
+          Inbox de Acto o Condición Insegura
+        </button>
+        <button class="action-button">
+          Registrar Acción Correctiva o Preventiva
+        </button>
+        <button class="action-button">
+          Consultar Acción Correctivas o Preventiva
+        </button>
         <!-- <button class="action-button">Consultar Acción Correctivas o Preventiva</button> -->
       </div>
     </div>
 
     <div class="illustration-section">
-      <img src="assets/images/indra/savety.png" alt="Ilustración de seguridad" class="illustration">
+      <img
+        src="assets/images/indra/savety.png"
+        alt="Ilustración de seguridad"
+        class="illustration"
+      />
     </div>
   </div>
 
