feat: corrective-preventive action record added.

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -16,7 +16,10 @@
         <button class="action-button" (click)="navigateToInboxActoInseguro()">
           Inbox de Acto o Condición Insegura
         </button>
-        <button class="action-button">
+        <button
+          class="action-button"
+          (click)="navigateToAccionCorrectivaPreventiva()"
+        >
           Registrar Acción Correctiva o Preventiva
         </button>
         <button class="action-button">
