feat: corrective-preventive action query added.

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -18,11 +18,14 @@
         </button>
         <button
           class="action-button"
-          (click)="navigateToAccionCorrectivaPreventiva()"
+          (click)="navigateToRegistrarAccionCorrectivaPreventiva()"
         >
           Registrar Acción Correctiva o Preventiva
         </button>
-        <button class="action-button">
+        <button
+          class="action-button"
+          (click)="navigateToConsultarAccionCorrectivaPreventiva()"
+        >
           Consultar Acción Correctivas o Preventiva
         </button>
         <!-- <button class="action-button">Consultar Acción Correctivas o Preventiva</button> -->
